--- a/sidechain/l4/l4.md
+++ b/sidechain/l4/l4.md
@@ -2,4 +2,32 @@
 ## Generalized State Channel
 
 
+Goal:
+
+* Design a generialized state channels implementation that preserves privacy, is built using modular components, has support for multiple parallel operations inside a single channel, and allows users to upgrade channel designs without any on-chain operations.
+* Make it easy for developers to utilize state channels by providing a framework and standard modular components for building secure, performant applications.
+
+
+**Places as little on-chain as possible while still remaining secure**
+
+
+#### Terminology
+
+**State Deposit**
+locking up some portion of blockchain state into a multisig contract, controlled by a defined set of participants.
+
+**Unanimous Consent**
+All parties sign each off-chain transaction.
+
+**Instant Finality**
+For this reason, state channels offer 'instant' transactions -- i.ie, parties do not have to wait for blockchain confirmations.
+An application can *immediately* consider an operation finalized and display that to user.
+
+**Refer back to the Blockchain only when Necessary**
+If anything goes wrong, all parties always have the option to deploy the latest version of the state to the blockchain.
+
+
+#### Conterfactual Terminology
+
+
 
