--- a/sidechain/l4/l4.md
+++ b/sidechain/l4/l4.md
@@ -11,23 +11,56 @@ Goal:
 **Places as little on-chain as possible while still remaining secure**
 
 
-#### Terminology
+### Terminology
 
 **State Deposit**
+
 locking up some portion of blockchain state into a multisig contract, controlled by a defined set of participants.
 
 **Unanimous Consent**
+
 All parties sign each off-chain transaction.
 
 **Instant Finality**
+
 For this reason, state channels offer 'instant' transactions -- i.ie, parties do not have to wait for blockchain confirmations.
 An application can *immediately* consider an operation finalized and display that to user.
 
 **Refer back to the Blockchain only when Necessary**
+
 If anything goes wrong, all parties always have the option to deploy the latest version of the state to the blockchain.
 
 
-#### Conterfactual Terminology
+### Conterfactual Terminology
 
+**Conterfactual**
+
+meas something that *could* be true, but it is not.
+
+**Counterfactual X**
+
+to describe a case where:
+
+* X could happen on chain, but does not
+* Any participant can unilaterally make X happen on-chain
+* Participants can therefore act as though X has happened on-chain
+
+
+### Counterfactual Instantiation
+
+Counterfactual Instantiation means to instantiate a contract without actually deploying it on-chain.
+
+When a contract is conterfactually instantiated, all parties in the channel act as though it has been deployed, even though it has not.
+
+Counterfactual instantiations is achieved by making user sign and share **commitments** to the multisig wallet.
+These commitments say that if the counterfactually instantiated contract were to be instantiated on-chain, the multisig wallet will look at the instantiated contract and transfer the appropriate state deposit based on the state of that contract.
+
+
+**Global Registry**
+
+An on-chain contract that maps unique deterministic addresses for any counterfactual contract to actual on-chain deployed addresses.
+The hashing function used to produce the deterministic address can be any function that takes into account the bytecode, its owner, and a unique identifier.
+
+Registry 保存了counterfactual contract与on-chain deployed contract的映射关系，从而实现即使不在链上部署合约，也可以执行这个合约的功能。
 
 
