--- a/sidechain/l4/l4.md
+++ b/sidechain/l4/l4.md
@@ -63,4 +63,13 @@ The hashing function used to produce the deterministic address can be any functi
 
 Registry 保存了counterfactual contract与on-chain deployed contract的映射关系，从而实现即使不在链上部署合约，也可以执行这个合约的功能。
 
+For example, we might have a contract 'C' with bytecode and constructor arguments 'initcode'.  
+The result of running a function call to the registry with the argument 'initcode' would be that an entry
+would be added to the registry: its key being the counterfactual address and its value being the actual on-chain deployed address.
+
+* key : counterfactual address
+* value : actual on-chain deployed address
+
+
+
 
